# clip-sync

./: .gitignore  Cargo.toml  D.UI  Dockerfile  README.md  build.rs  clip-sync.desktop  clip-sync.exe.manifest  clip-sync.rc  clip-sync.service  com.0d0a.clipsync.plist  config-server.toml  config.toml
.github/workflows/: CI-Rust.yml  CI-UI.yml  CI.yml  docker-publish.yml  release.yml
client-interface/: Cargo.toml
client-interface/src/: lib.rs
clip-sync/: Cargo.toml  clip-sync.rc  package-lock.json  package.json  tsconfig.node.json
clip-sync-cli/: Cargo.toml
clip-sync-cli/src/: client.rs  main.rs
clip-sync-config/: Cargo.toml
clip-sync-config/src/: lib.rs
clip-sync-server/: Cargo.toml
clip-sync-server/src/: main.rs
clip-sync-ui/: Cargo.toml  Dioxus.toml  index.html  next.config.js  package-lock.json  package.json
clip-sync-ui/.cargo/: config.toml
clip-sync-ui/app/: globals.css  layout.tsx  page.tsx
clip-sync-ui/app/lib/: api.ts
clip-sync-ui/app/ui/: image-view.tsx  text-view.tsx  utils-view.tsx
clip-sync-ui/assets/: style.css
clip-sync-ui/public/: antd.min.css
clip-sync-ui/scripts/: genAntdCss.tsx
clip-sync-ui/src/: App.css  App.tsx  i18n.ts  index.css  main.rs
clip-sync-ui/src/lib/: api.ts
clip-sync-ui/src/ui/: image-view.tsx  text-view.tsx  utils-view.tsx
clip-sync/app/: globals.css  page.tsx
clip-sync/app/lib/: api.ts
clip-sync/app/ui/: text-view.tsx
clip-sync/src/: main.rs
mqtt-client/: Cargo.toml
mqtt-client/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
src/: client.rs  clipboard_handler.rs  main.rs  mqtt_client.rs
src/server/: auth.rs  global_state.rs  mod.rs  models.rs  search.rs
storage/: Cargo.toml
storage/src/: lib.rs  tantivy_storage.rs
websocket-client/: Cargo.toml
websocket-client/src/: lib.rs
websocket-server/: Cargo.toml
websocket-server/src/: auth.rs  global_state.rs  lib.rs  models.rs  search.rs
