[workspace]
resolver = "2"
members = [
    "client-interface",
    "clip-sync",
    "clip-sync-cli",
    "clip-sync-config",
    "clip-sync-server",
    "mqtt-client",
    "storage",
    "websocket-client",
    "websocket-server",
]

[workspace.package]
authors = ["Chen Xu <windoze@0d0a.com>"]
version = "0.8.2"
edition = "2021"
description = "A clipboard sync tool"
rust-version = "1.75.0"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4" }
clap-verbosity-flag = "2"
futures = { version = "0.3" }
tokio = { version = "1" }
serde = { version = "1" }
serde_json = "1"
bincode = "1"
toml = "0.8"
platform-dirs = "0.3"
futures-util = "0.3"
poem = { version = "3" }
chrono = "0.4"
png = { version = "0.17" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12" }
rumqttc = { version = "0.24" }
arboard = { version = "3" }
clipboard-master = { version = "3" }
gethostname = { version = "0.4" }
random-string = { version = "1" }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
url = { version = "2" }
webbrowser = { version = "1" }
image = { version = "0.25" }
tray-item = { version = "0.10" }

clip-sync-config = { path = "clip-sync-config" }
client-interface = { path = "client-interface" }
mqtt-client = { path = "mqtt-client" }
storage = { path = "storage" }
websocket-client = { path = "websocket-client" }
websocket-server = { path = "websocket-server" }
