[package]
name = "clip-sync-config"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Configuration for clip-sync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true }
platform-dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
url = { workspace = true, optional = true }

mqtt-client = { workspace = true, optional = true }
websocket-client = { workspace = true, optional = true}
websocket-server = { workspace = true, optional = true }

[features]
websocket = ["websocket-client", "url"]
mqtt = ["mqtt-client"]
server = ["websocket-server"]
