[package]
name = "clip-sync-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0" }
dioxus-web = { version = "0.4.0" }
# dioxus-tui = { version = "0.4.0" }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.78"
log = "0.4.14"
console_error_panic_hook = "*"
im-rc = "15.0.0"
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
dioxus-logger = "0.4"
dioxus-websocket-hooks = "0.0.2"
gloo-timers = { version = "0.3", features = ["futures"] }