[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
futures-util = "0.3"
poem = { version = "1", features = ["websocket"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "0.10"
